--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 </head>
 <body>
   <div class="view">
+    <div class="info-about">
+      <div class="about-box">
+        <img src="img/roulette_img.jpg" alt="">
+        <div class="about-text">
+          <h1>Рулетка</h1>
+          <hr>
+          <p>Азартная игра (слово рулетка (roulette) происходит от 
+              <br>французского слова «ру» в переводе с французского означает 
+              <br>«колесо, ролик, бегунок»). Рулетка впервые появилась во 
+              <br>Франции. Она называлась «хока» и в ней было 40 
+              <br>пронумерованных гнёзд и три были помечены «зеро». Во времена 
+              <br>короля Луи XIV, кардинал Мазарини, чтобы пополнить казну, 
+              <br>повсеместно разрешил во Франции открывать казино. Рулетка 
+              <br>впервые появилась во Франции. Она называлась «хока» и в ней 
+              <br>было 40 пронумерованных гнёзд и три были помечены «зеро». Во 
+              <br>времена короля Луи XIV, кардинал Мазарини, чтобы пополнить 
+              <br>казну, повсеместно разрешил во Франции открывать казино.
+          </p>
+      </div>
+      </div>
+    </div>
     <div class="container">
       <div class="content-top">
         <div class="jackpot">
